# rhai

./: .gitignore  CHANGELOG.md  Cargo.toml  rustfmt.toml
.github/: dependabot.yaml
.github/workflows/: benchmark.yml  build.yml  rustdoc.yml
benches/: compile.rs  engine.rs  eval_array.rs  eval_expression.rs  eval_map.rs  eval_module.rs  eval_scope.rs  eval_type.rs  iterations.rs  parsing.rs  primes.rs  rkyv.rs  speedtest.rs
codegen/: Cargo.toml
codegen/src/: attrs.rs  function.rs  lib.rs  rhai_module.rs
codegen/tests/: test_custom_type.rs
doc/src/: links.md
examples/: arrays_and_structs.rs  callback.rs  custom_types.rs  custom_types_and_methods.rs  hello.rs  pause_and_resume.rs  reuse_scope.rs  rkyv.rs  serde.rs  simple_fn.rs  strings.rs  threading.rs
examples/definitions/: main.rs
examples/event_handler_js/: main.rs
examples/event_handler_main/: main.rs
examples/event_handler_map/: main.rs
src/: any.rs  api.rs  ast.rs  builtin.rs  bytecode.rs  engine.rs  error.rs  fn_call.rs  fn_native.rs  fn_register.rs  lib.rs  module.rs  parser.rs  scope.rs  tests.rs  token.rs  tokenizer.rs
src/api/: call_fn.rs  deprecated.rs  eval.rs  files.rs  formatting.rs  register.rs
src/ast/: ast.rs  expr.rs  flags.rs  ident.rs  namespace.rs  script_fn.rs  stmt.rs
src/eval/: chaining.rs  data_check.rs  eval_context.rs  expr.rs
src/func/: call.rs  func_args.rs  hashing.rs  register.rs  script.rs
src/module/: mod.rs
src/rkyv/: archive.rs  de.rs  mod.rs  ser.rs
src/serde/: de.rs  mod.rs  serialize.rs
src/types/: dynamic.rs  float.rs  immutable_string.rs  interner.rs  parse_error.rs  position.rs  (+3 more)
tests/: arrays.rs  assignments.rs  binary_ops.rs  bit_fields.rs  blobs.rs  bool_op.rs  build_type.rs  call_fn.rs  chars.rs  closures.rs  comments.rs  compound_equality.rs  constants.rs  custom_syntax.rs  data_size.rs  debugging.rs  decimal.rs  decrement.rs  default_expr.rs  default_params.rs  eval.rs  expressions.rs  extract_variables.rs  float.rs  fn_ptr.rs  fn_resolution_cache_isolation.rs  for.rs  functions.rs  get_set.rs  hashmap.rs  if_block.rs  increment.rs  looping.rs  maps.rs  math.rs  method_call.rs  mismatched_op.rs  modules.rs  native.rs  not.rs  (+26 more)
(+8 files in other folders)
