[package]
name = "rhai_codegen"
version = "1.5.0"
rust-version.workspace = true
edition.workspace = true
authors = ["jhwgh1968", "Stephen Chung"]
description = "Procedural macros support package for Rhai, a scripting language and engine for Rust"
keywords = [
    "scripting",
    "scripting-engine",
    "scripting-language",
    "embedded",
    "plugin",
]
categories = ["no-std", "embedded", "wasm", "parser-implementations"]
homepage = "https://rhai.rs/book/plugins/index.html"
repository = "https://github.com/rhaiscript/rhai"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[features]
default = []
metadata = []

[dependencies]
proc-macro2 = "1.0.66"
syn = { version = "2.0.27", features = [
    "full",
    "parsing",
    "printing",
    "proc-macro",
    "extra-traits",
] }
quote = "1.0.32"

[dev-dependencies]
rhai = { workspace = true, features = ["metadata"] }
trybuild = "1.0.82"
